--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -27,7 +27,7 @@ build:
 
 after_build:
   - cmd: python deploy_binaries.py -c %CONFIGURATION% -d
-  - cmd: 7z a Sharpmake_%CONFIGURATION%.zip %APPVEYOR_BUILD_FOLDER%\Sharpmake.Application\bin\%CONFIGURATION%\*
+  - cmd: 7z a Sharpmake_%CONFIGURATION%.zip %APPVEYOR_BUILD_FOLDER%\Binaries\*
 
 after_test:
  - cmd: python regression_test.py
