--- a/samples/CSharpVsix/reference/projects/csharpvsix/CSharpVsix.vs2015.v4_5.csproj
+++ b/samples/CSharpVsix/reference/projects/csharpvsix/CSharpVsix.vs2015.v4_5.csproj
@@ -186,6 +186,10 @@
       <Link>Resources\HelloWorldCommandPackage.ico</Link>
     </Content>
   </ItemGroup>
+  <PropertyGroup>
+    <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
+    <UseCodebase>true</UseCodebase>
+  </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''"/>
 </Project>
