--- a/samples/SharpmakeGen/reference/sharpmake/Sharpmake.csproj
+++ b/samples/SharpmakeGen/reference/sharpmake/Sharpmake.csproj
@@ -95,6 +95,7 @@
     <Compile Include="Project.Configuration.cs" />
     <Compile Include="Project.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReferenceAlias.cs" />
     <Compile Include="RegexCache.cs" />
     <Compile Include="Resolver.cs" />
     <Compile Include="SharpmakeExtension.cs" />
