--- a/Sharpmake/Sharpmake.csproj
+++ b/Sharpmake/Sharpmake.csproj
@@ -96,6 +96,7 @@
     <Compile Include="Project.Configuration.cs" />
     <Compile Include="Project.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="DotNetReferenceCollection.cs" />
     <Compile Include="ReferenceAlias.cs" />
     <Compile Include="RegexCache.cs" />
     <Compile Include="Resolver.cs" />
