--- a/samples/SharpmakeGen/reference/sharpmake/Sharpmake.csproj
+++ b/samples/SharpmakeGen/reference/sharpmake/Sharpmake.csproj
@@ -66,6 +66,7 @@
     <Compile Include="DebugProjectGenerator.cs" />
     <Compile Include="DependencyTracker.cs" />
     <Compile Include="DotNetDependency.cs" />
+    <Compile Include="DotNetReferenceCollection.cs" />
     <Compile Include="Exception.cs" />
     <Compile Include="ExtensionLoader.cs" />
     <Compile Include="ExtensionMethods.cs" />
