--- a/Sharpmake/Sharpmake.csproj
+++ b/Sharpmake/Sharpmake.csproj
@@ -107,6 +107,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReferenceAlias.cs" />
     <Compile Include="RegexCache.cs" />
+    <Compile Include="ResharperAnnotations.cs" />
     <Compile Include="Resolver.cs" />
     <Compile Include="SharpmakeExtension.cs" />
     <Compile Include="Solution.Configuration.cs" />
