--- a/samples/HelloAndroid/resources/build.xml
+++ b/samples/HelloAndroid/resources/build.xml
@@ -77,6 +77,6 @@
          in order to avoid having your file be overridden by tools such as "android update project"
     -->
     <!-- version-tag: 1 -->
-    <import file="samples/HelloAndroid/ant/build.xml"/>
+    <import file="D:\a\Sharpmake\Sharpmake\samples\HelloAndroid\ant\build.xml"/>
 
 </project>
